-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.0.2
-
None
-
Qt 5.0.2
Windows 7
OS X 10.8.3
Ubuntu 12.04
On Windows QKeyEvent::count() returns always 0. QKeyEvent::text() returns correct value.
On OS X QKeyEvent::count() returns correct number but QKeyEvent::text() doesn't have any content.
On Linux both functions return correct values.
For Gerrit Dashboard: QTBUG-31285 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
57249,2 | Fix issue when QKeyEvent::text() was returning empty string | release | qt/qtbase | Status: MERGED | +2 | 0 |
57268,1 | Fixes QKeyEvent::count() on Windows | stable | qt/qtbase | Status: MERGED | +2 | 0 |